reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell, cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93193787"
---
# <span data-ttu-id="0bfb2-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="0bfb2-103">Import-Csv</span></span>

## <span data-ttu-id="0bfb2-104">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="0bfb2-104">SYNOPSIS</span></span>
<span data-ttu-id="0bfb2-105">Cria objetos personalizados do tipo tabela a partir dos itens em um arquivo CSV (valores separados por vírgula).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="0bfb2-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="0bfb2-106">SYNTAX</span></span>

### <span data-ttu-id="0bfb2-107">Delimitador (padrão)</span><span class="sxs-lookup"><span data-stu-id="0bfb2-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="0bfb2-108">parâmetro</span><span class="sxs-lookup"><span data-stu-id="0bfb2-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="0bfb2-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="0bfb2-109">DESCRIPTION</span></span>

<span data-ttu-id="0bfb2-110">O `Import-Csv` cmdlet cria objetos personalizados do tipo tabela a partir dos itens em arquivos CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="0bfb2-111">Cada coluna no arquivo CSV torna-se uma propriedade do objeto personalizado e os itens nas linhas tornam-se os valores de propriedade.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="0bfb2-112">`Import-Csv` funciona em qualquer arquivo CSV, incluindo arquivos gerados pelo `Export-Csv` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="0bfb2-113">Você pode usar os parâmetros do `Import-Csv` cmdlet para especificar a linha de cabeçalho de coluna e o delimitador de item, ou direto `Import-Csv` para usar o separador de lista para a cultura atual como o delimitador de item.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="0bfb2-114">Você também pode usar os `ConvertTo-Csv` `ConvertFrom-Csv` cmdlets e para converter objetos em cadeias de caracteres CSV (e vice-versa).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="0bfb2-115">Esses cmdlets são os mesmos que os `Export-CSV` `Import-Csv` cmdlets e, exceto que eles não lidam com arquivos.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="0bfb2-116">Se uma entrada de linha de cabeçalho em um arquivo CSV contiver um valor vazio ou nulo, o PowerShell inserirá um nome de linha de cabeçalho padrão e exibirá uma mensagem de aviso.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="0bfb2-117">`Import-Csv` usa a BOM (marca de ordem de byte) para detectar o formato de codificação do arquivo.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="0bfb2-118">Se o arquivo não tiver uma BOM, ele assumirá que a codificação é UTF8.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="0bfb2-119">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="0bfb2-119">EXAMPLES</span></span>

### <span data-ttu-id="0bfb2-120">Exemplo 1: importar objetos de processo</span><span class="sxs-lookup"><span data-stu-id="0bfb2-120">Example 1: Import process objects</span></span>

<span data-ttu-id="0bfb2-121">Este exemplo mostra como exportar e importar um arquivo CSV de objetos de processo.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="0bfb2-122">O `Get-Process` cmdlet envia objetos de processo para baixo do pipeline para o `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="0bfb2-123">O `Export-Csv` cmdlet converte os objetos de processo em cadeias de caracteres CSV e salva as cadeias de caracteres no arquivo de Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="0bfb2-124">O `Import-Csv` cmdlet importa as cadeias de caracteres CSV do arquivo Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="0bfb2-125">As cadeias de caracteres são salvas na `$P` variável.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="0bfb2-126">A `$P` variável é enviada ao pipeline para o `Get-Member` cmdlet que exibe as propriedades das cadeias de caracteres CSV importadas.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="0bfb2-127">A `$P` variável é enviada ao pipeline para o `Format-Table` cmdlet e exibe os objetos.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="0bfb2-128">Exemplo 2: especificar o delimitador</span><span class="sxs-lookup"><span data-stu-id="0bfb2-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="0bfb2-129">Este exemplo mostra como usar o parâmetro **delimitador** do `Import-Csv` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="0bfb2-130">O `Get-Process` cmdlet envia objetos de processo para baixo do pipeline para o `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="0bfb2-131">O `Export-Csv` cmdlet converte os objetos de processo em cadeias de caracteres CSV e salva as cadeias de caracteres no arquivo de Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="0bfb2-132">O parâmetro **delimitador** é usado para especificar um delimitador de dois-pontos.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="0bfb2-133">O `Import-Csv` cmdlet importa as cadeias de caracteres CSV do arquivo Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="0bfb2-134">As cadeias de caracteres são salvas na `$P` variável.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="0bfb2-135">Para `$P` variável é enviado o pipeline para o `Format-Table` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="0bfb2-136">Exemplo 3: especificar a cultura atual para o delimitador</span><span class="sxs-lookup"><span data-stu-id="0bfb2-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="0bfb2-137">Este exemplo mostra como usar o `Import-Csv` cmdlet com o parâmetro **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="0bfb2-138">O `Get-Culture` cmdlet usa as propriedades aninhadas **TextInfo** e **ListSeparator** para obter o separador de lista padrão da cultura atual.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="0bfb2-139">O `Get-Process` cmdlet envia objetos de processo para baixo do pipeline para o `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="0bfb2-140">O `Export-Csv` cmdlet converte os objetos de processo em cadeias de caracteres CSV e salva as cadeias de caracteres no arquivo de Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="0bfb2-141">O parâmetro **UseCulture** usa o separador de lista padrão da cultura atual.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="0bfb2-142">O `Import-Csv` cmdlet importa as cadeias de caracteres CSV do arquivo Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="0bfb2-143">Exemplo 4: alterar nomes de propriedade em um objeto importado</span><span class="sxs-lookup"><span data-stu-id="0bfb2-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="0bfb2-144">Este exemplo mostra como usar o parâmetro **header** de `Import-Csv` para alterar os nomes das propriedades no objeto importado resultante.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="0bfb2-145">O `Start-Job` cmdlet inicia um trabalho em segundo plano que é executado `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="0bfb2-146">Um objeto de trabalho é enviado ao pipeline para o `Export-Csv` cmdlet e convertido em uma cadeia de caracteres CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="0bfb2-147">O parâmetro **NoTypeInformation** remove o cabeçalho de informações de tipo da saída CSV e é opcional no PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="0bfb2-148">A `$Header` variável contém um cabeçalho personalizado que substitui os seguintes valores padrão: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** e **PSJobTypeName** .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="0bfb2-149">A `$A` variável usa o `Get-Content` cmdlet para obter a cadeia de caracteres CSV do arquivo de Jobs.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="0bfb2-150">A `$A` variável é usada para remover o cabeçalho padrão do arquivo.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="0bfb2-151">O `Out-File` cmdlet salva a nova versão do arquivo de Jobs.csv na `$A` variável.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="0bfb2-152">O `Import-Csv` cmdlet importa o arquivo de Jobs.csv e usa o parâmetro **header** para aplicar a `$Header` variável.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="0bfb2-153">A `$J` variável contém o **PSCustomObject** importado e exibe o objeto no console do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="0bfb2-154">Exemplo 5: criar um objeto personalizado usando um arquivo CSV</span><span class="sxs-lookup"><span data-stu-id="0bfb2-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="0bfb2-155">Este exemplo mostra como criar um objeto personalizado no PowerShell usando um arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="0bfb2-156">Para criar seu arquivo de Links.csv, use os valores mostrados na `Get-Content` saída.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="0bfb2-157">O `Get-Content` cmdlet exibe o arquivo Links.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="0bfb2-158">O `Import-Csv` cmdlet importa o arquivo de Links.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="0bfb2-159">O parâmetro **header** especifica os nomes de propriedade **LinkId** e **TopicTitle** .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="0bfb2-160">Os objetos são armazenados na `$A` variável.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="0bfb2-161">O `Get-Member` cmdlet mostra os nomes de Propriedade do parâmetro **header** .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="0bfb2-162">O `Where-Object` cmdlet seleciona objetos com a propriedade **TopicTitle** que inclui o **alias** .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="0bfb2-163">Exemplo 6: importar um CSV que não tem um valor</span><span class="sxs-lookup"><span data-stu-id="0bfb2-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="0bfb2-164">Este exemplo mostra como o `Import-Csv` cmdlet no PowerShell responde quando a linha de cabeçalho em um arquivo CSV inclui um valor nulo ou vazio.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="0bfb2-165">`Import-Csv` Substitui um nome padrão para a linha de cabeçalho ausente que se torna o nome da Propriedade do objeto que `Import-Csv` retorna.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="0bfb2-166">Para criar seu arquivo de Projects.csv, use os valores mostrados na saída do exemplo `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="0bfb2-167">O `Get-Content` cmdlet exibe o arquivo Projects.csv.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="0bfb2-168">A linha de cabeçalho não tem um valor entre **ProjectName** e **concluída** .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-168">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="0bfb2-169">O `Import-Csv` cmdlet importa o arquivo de Projects.csv e exibe uma mensagem de aviso porque **H1** é um nome de cabeçalho padrão.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="0bfb2-170">O `(Import-Csv -Path
.\Projects.csv).H1` comando obtém os valores de propriedade **H1** e exibe um aviso.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="0bfb2-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="0bfb2-171">PARAMETERS</span></span>

### <span data-ttu-id="0bfb2-172">-Delimitador</span><span class="sxs-lookup"><span data-stu-id="0bfb2-172">-Delimiter</span></span>

<span data-ttu-id="0bfb2-173">Especifica o delimitador que separa os valores de propriedade no arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="0bfb2-174">O padrão é uma vírgula (,).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-174">The default is a comma (,).</span></span>

<span data-ttu-id="0bfb2-175">Insira um caractere, como dois pontos (:).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="0bfb2-176">Para especificar um ponto e vírgula (;) Coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="0bfb2-177">Se você especificar um caractere que não seja o delimitador de cadeia de caracteres real no arquivo, o `Import-Csv` não poderá criar os objetos a partir das cadeias CSV e retornará as seqüências de caracteres CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0bfb2-178">-Codificação</span><span class="sxs-lookup"><span data-stu-id="0bfb2-178">-Encoding</span></span>

<span data-ttu-id="0bfb2-179">Especifica o tipo de codificação para o arquivo de destino.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="0bfb2-180">O valor padrão é `Default`.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-180">The default value is `Default`.</span></span>

<span data-ttu-id="0bfb2-181">Os valores aceitáveis para esse parâmetro são os seguintes:</span><span class="sxs-lookup"><span data-stu-id="0bfb2-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="0bfb2-182">`ASCII` Usa conjunto de caracteres ASCII (7 bits).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="0bfb2-183">`BigEndianUnicode` Usa UTF-16 com a ordem de bytes big-endian.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="0bfb2-184">`Default` Usa a codificação que corresponde à página de código ativa do sistema (geralmente ANSI).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="0bfb2-185">`OEM` Usa a codificação que corresponde à página de código OEM atual do sistema.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="0bfb2-186">`Unicode` Usa UTF-16 com a ordem de byte little-endian.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="0bfb2-187">`UTF7` Usa UTF-7.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="0bfb2-188">`UTF8` Usa UTF-8.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="0bfb2-189">`UTF32` Usa UTF-32 com a ordem de byte little-endian.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0bfb2-190">-Cabeçalho</span><span class="sxs-lookup"><span data-stu-id="0bfb2-190">-Header</span></span>

<span data-ttu-id="0bfb2-191">Especifica uma linha de cabeçalho de coluna alternativo para o arquivo importado.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="0bfb2-192">O cabeçalho de coluna determina os nomes de propriedade dos objetos criados pelo `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="0bfb2-193">Insira cabeçalhos de coluna como uma lista separada por vírgulas.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="0bfb2-194">Não coloque a cadeia de caracteres do cabeçalho entre aspas.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="0bfb2-195">Coloque cada cabeçalho de coluna entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="0bfb2-196">Se você inserir menos cabeçalhos de coluna do que as colunas de dados, as colunas de dados restantes serão descartadas.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="0bfb2-197">Se você inserir mais cabeçalhos de coluna do que as colunas de dados, os cabeçalhos de coluna adicionais serão criados com colunas de dados vazias.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="0bfb2-198">Ao usar o parâmetro **header** , exclua a linha de cabeçalho original do arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="0bfb2-199">Caso contrário, `Import-Csv` cria um objeto extra dos itens na linha de cabeçalho.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0bfb2-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="0bfb2-200">-LiteralPath</span></span>

<span data-ttu-id="0bfb2-201">Especifica o caminho para o arquivo CSV a importar.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="0bfb2-202">Ao contrário de **Path** , o valor do parâmetro **LiteralPath** é usado exatamente como foi digitado.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="0bfb2-203">Nenhum caractere é interpretado como caractere curinga.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="0bfb2-204">Se o caminho incluir caracteres de escape, coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="0bfb2-205">Aspas simples instruem o PowerShell a não interpretar nenhum caractere como sequências de escape.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="0bfb2-206">-Path</span><span class="sxs-lookup"><span data-stu-id="0bfb2-206">-Path</span></span>

<span data-ttu-id="0bfb2-207">Especifica o caminho para o arquivo CSV a importar.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="0bfb2-208">Também é possível canalizar um caminho para `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="0bfb2-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="0bfb2-209">-UseCulture</span></span>

<span data-ttu-id="0bfb2-210">Usa o separador de lista para a cultura atual como o delimitador de item.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="0bfb2-211">Para localizar o separador de lista para uma cultura, use o seguinte comando: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0bfb2-212">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="0bfb2-212">CommonParameters</span></span>

<span data-ttu-id="0bfb2-213">Este cmdlet oferece suporte aos parâmetros comuns: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction e -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="0bfb2-214">Para obter mais informações, confira [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="0bfb2-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="0bfb2-215">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="0bfb2-215">INPUTS</span></span>

### <span data-ttu-id="0bfb2-216">System.String</span><span class="sxs-lookup"><span data-stu-id="0bfb2-216">System.String</span></span>

<span data-ttu-id="0bfb2-217">É possível canalizar uma cadeia de caracteres que contém um caminho para `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0bfb2-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="0bfb2-218">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="0bfb2-218">OUTPUTS</span></span>

### <span data-ttu-id="0bfb2-219">Objeto</span><span class="sxs-lookup"><span data-stu-id="0bfb2-219">Object</span></span>

<span data-ttu-id="0bfb2-220">Esse cmdlet retorna os objetos descritos pelo conteúdo no arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="0bfb2-221">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="0bfb2-221">NOTES</span></span>

<span data-ttu-id="0bfb2-222">Como os objetos importados são versões CSV do tipo de objeto, eles não são reconhecidos e formatados pelas entradas de formatação de tipo do PowerShell que formatam as versões não-CSV do tipo de objeto.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="0bfb2-223">O resultado de um `Import-Csv` comando é uma coleção de cadeias de caracteres que formam um objeto personalizado como tabela.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="0bfb2-224">Cada linha é uma cadeia de caracteres separada, portanto, você pode usar a propriedade **Count** do objeto para contar as linhas da tabela.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="0bfb2-225">As colunas são as propriedades do objeto e os itens nas linhas são os valores das propriedades.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="0bfb2-226">A linha de cabeçalho de coluna determina o número de colunas e os nomes dessas colunas.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="0bfb2-227">Os nomes das colunas também são os nomes das propriedades dos objetos.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="0bfb2-228">A primeira linha é interpretada como os cabeçalhos de coluna, a menos que você use o parâmetro **header** para especificar cabeçalhos de coluna.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="0bfb2-229">Se uma linha qualquer tiver mais valores que a linha de cabeçalhos, os valores excedentes serão ignorados.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="0bfb2-230">Se a linha de cabeçalho da coluna não tiver um valor ou contiver um valor nulo ou vazio, o `Import-Csv` usará **H** seguido por um número para o cabeçalho da coluna e o nome da propriedade ausentes.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="0bfb2-231">No arquivo CSV, cada objeto é representado por uma lista separada por vírgulas dos valores de propriedade do objeto.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="0bfb2-232">Os valores de propriedade são convertidos em cadeias de caracteres usando o método **ToString ()** do objeto, para que sejam representados pelo nome do valor da propriedade.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="0bfb2-233">`Export-Csv` não exporta os métodos do objeto.</span><span class="sxs-lookup"><span data-stu-id="0bfb2-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="0bfb2-234">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="0bfb2-234">RELATED LINKS</span></span>

[<span data-ttu-id="0bfb2-235">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="0bfb2-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="0bfb2-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="0bfb2-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="0bfb2-237">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="0bfb2-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="0bfb2-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="0bfb2-238">Get-Culture</span></span>](Get-Culture.md)
