reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell, cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 07/03/2020
ms.locfileid: "93193039"
---
# <span data-ttu-id="75159-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="75159-103">Import-Csv</span></span>

## <span data-ttu-id="75159-104">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="75159-104">SYNOPSIS</span></span>
<span data-ttu-id="75159-105">Cria objetos personalizados do tipo tabela a partir dos itens em um arquivo CSV (valores separados por vírgula).</span><span class="sxs-lookup"><span data-stu-id="75159-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="75159-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="75159-106">SYNTAX</span></span>

### <span data-ttu-id="75159-107">DelimiterPath (padrão)</span><span class="sxs-lookup"><span data-stu-id="75159-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="75159-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="75159-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="75159-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="75159-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="75159-110">CultureLiteralPath</span><span class="sxs-lookup"><span data-stu-id="75159-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="75159-111">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="75159-111">DESCRIPTION</span></span>

<span data-ttu-id="75159-112">O `Import-Csv` cmdlet cria objetos personalizados do tipo tabela a partir dos itens em arquivos CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="75159-113">Cada coluna no arquivo CSV torna-se uma propriedade do objeto personalizado e os itens nas linhas tornam-se os valores de propriedade.</span><span class="sxs-lookup"><span data-stu-id="75159-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="75159-114">`Import-Csv` funciona em qualquer arquivo CSV, incluindo arquivos gerados pelo `Export-Csv` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="75159-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="75159-115">Você pode usar os parâmetros do `Import-Csv` cmdlet para especificar a linha de cabeçalho de coluna e o delimitador de item, ou direto `Import-Csv` para usar o separador de lista para a cultura atual como o delimitador de item.</span><span class="sxs-lookup"><span data-stu-id="75159-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="75159-116">Você também pode usar os `ConvertTo-Csv` `ConvertFrom-Csv` cmdlets e para converter objetos em cadeias de caracteres CSV (e vice-versa).</span><span class="sxs-lookup"><span data-stu-id="75159-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="75159-117">Esses cmdlets são os mesmos que os `Export-CSV` `Import-Csv` cmdlets e, exceto que eles não lidam com arquivos.</span><span class="sxs-lookup"><span data-stu-id="75159-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="75159-118">Se uma entrada de linha de cabeçalho em um arquivo CSV contiver um valor vazio ou nulo, o PowerShell inserirá um nome de linha de cabeçalho padrão e exibirá uma mensagem de aviso.</span><span class="sxs-lookup"><span data-stu-id="75159-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="75159-119">A partir do PowerShell 6,0, `Import-Csv` o agora dá suporte ao formato de arquivo de log estendido W3C.</span><span class="sxs-lookup"><span data-stu-id="75159-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="75159-120">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="75159-120">EXAMPLES</span></span>

### <span data-ttu-id="75159-121">Exemplo 1: importar objetos de processo</span><span class="sxs-lookup"><span data-stu-id="75159-121">Example 1: Import process objects</span></span>

<span data-ttu-id="75159-122">Este exemplo mostra como exportar e importar um arquivo CSV de objetos de processo.</span><span class="sxs-lookup"><span data-stu-id="75159-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="75159-123">O `Get-Process` cmdlet envia objetos de processo para baixo do pipeline para o `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="75159-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="75159-124">O `Export-Csv` cmdlet converte os objetos de processo em cadeias de caracteres CSV e salva as cadeias de caracteres no arquivo de Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="75159-125">O `Import-Csv` cmdlet importa as cadeias de caracteres CSV do arquivo Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="75159-126">As cadeias de caracteres são salvas na `$P` variável.</span><span class="sxs-lookup"><span data-stu-id="75159-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="75159-127">A `$P` variável é enviada ao pipeline para o `Get-Member` cmdlet que exibe as propriedades das cadeias de caracteres CSV importadas.</span><span class="sxs-lookup"><span data-stu-id="75159-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="75159-128">A `$P` variável é enviada ao pipeline para o `Format-Table` cmdlet e exibe os objetos.</span><span class="sxs-lookup"><span data-stu-id="75159-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="75159-129">Exemplo 2: especificar o delimitador</span><span class="sxs-lookup"><span data-stu-id="75159-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="75159-130">Este exemplo mostra como usar o parâmetro **delimitador** do `Import-Csv` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="75159-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="75159-131">O `Get-Process` cmdlet envia objetos de processo para baixo do pipeline para o `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="75159-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="75159-132">O `Export-Csv` cmdlet converte os objetos de processo em cadeias de caracteres CSV e salva as cadeias de caracteres no arquivo de Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="75159-133">O parâmetro **delimitador** é usado para especificar um delimitador de dois-pontos.</span><span class="sxs-lookup"><span data-stu-id="75159-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="75159-134">O `Import-Csv` cmdlet importa as cadeias de caracteres CSV do arquivo Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="75159-135">As cadeias de caracteres são salvas na `$P` variável.</span><span class="sxs-lookup"><span data-stu-id="75159-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="75159-136">Para `$P` variável é enviado o pipeline para o `Format-Table` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="75159-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="75159-137">Exemplo 3: especificar a cultura atual para o delimitador</span><span class="sxs-lookup"><span data-stu-id="75159-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="75159-138">Este exemplo mostra como usar o `Import-Csv` cmdlet com o parâmetro **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="75159-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="75159-139">O `Get-Culture` cmdlet usa as propriedades aninhadas **TextInfo** e **ListSeparator** para obter o separador de lista padrão da cultura atual.</span><span class="sxs-lookup"><span data-stu-id="75159-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="75159-140">O `Get-Process` cmdlet envia objetos de processo para baixo do pipeline para o `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="75159-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="75159-141">O `Export-Csv` cmdlet converte os objetos de processo em cadeias de caracteres CSV e salva as cadeias de caracteres no arquivo de Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="75159-142">O parâmetro **UseCulture** usa o separador de lista padrão da cultura atual.</span><span class="sxs-lookup"><span data-stu-id="75159-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="75159-143">O `Import-Csv` cmdlet importa as cadeias de caracteres CSV do arquivo Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="75159-144">Exemplo 4: alterar nomes de propriedade em um objeto importado</span><span class="sxs-lookup"><span data-stu-id="75159-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="75159-145">Este exemplo mostra como usar o parâmetro **header** de `Import-Csv` para alterar os nomes das propriedades no objeto importado resultante.</span><span class="sxs-lookup"><span data-stu-id="75159-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="75159-146">O `Start-Job` cmdlet inicia um trabalho em segundo plano que é executado `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="75159-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="75159-147">Um objeto de trabalho é enviado ao pipeline para o `Export-Csv` cmdlet e convertido em uma cadeia de caracteres CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="75159-148">O parâmetro **NoTypeInformation** remove o cabeçalho de informações de tipo da saída CSV e é opcional no PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="75159-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="75159-149">A `$Header` variável contém um cabeçalho personalizado que substitui os seguintes valores padrão: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** e **PSJobTypeName** .</span><span class="sxs-lookup"><span data-stu-id="75159-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="75159-150">A `$A` variável usa o `Get-Content` cmdlet para obter a cadeia de caracteres CSV do arquivo de Jobs.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="75159-151">A `$A` variável é usada para remover o cabeçalho padrão do arquivo.</span><span class="sxs-lookup"><span data-stu-id="75159-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="75159-152">O `Out-File` cmdlet salva a nova versão do arquivo de Jobs.csv na `$A` variável.</span><span class="sxs-lookup"><span data-stu-id="75159-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="75159-153">O `Import-Csv` cmdlet importa o arquivo de Jobs.csv e usa o parâmetro **header** para aplicar a `$Header` variável.</span><span class="sxs-lookup"><span data-stu-id="75159-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="75159-154">A `$J` variável contém o **PSCustomObject** importado e exibe o objeto no console do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="75159-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="75159-155">Exemplo 5: criar um objeto personalizado usando um arquivo CSV</span><span class="sxs-lookup"><span data-stu-id="75159-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="75159-156">Este exemplo mostra como criar um objeto personalizado no PowerShell usando um arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="75159-157">Para criar seu arquivo de Links.csv, use os valores mostrados na `Get-Content` saída.</span><span class="sxs-lookup"><span data-stu-id="75159-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="75159-158">O `Get-Content` cmdlet exibe o arquivo Links.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="75159-159">O `Import-Csv` cmdlet importa o arquivo de Links.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="75159-160">O parâmetro **header** especifica os nomes de propriedade **LinkId** e **TopicTitle** .</span><span class="sxs-lookup"><span data-stu-id="75159-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="75159-161">Os objetos são armazenados na `$A` variável.</span><span class="sxs-lookup"><span data-stu-id="75159-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="75159-162">O `Get-Member` cmdlet mostra os nomes de Propriedade do parâmetro **header** .</span><span class="sxs-lookup"><span data-stu-id="75159-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="75159-163">O `Where-Object` cmdlet seleciona objetos com a propriedade **TopicTitle** que inclui o **alias** .</span><span class="sxs-lookup"><span data-stu-id="75159-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="75159-164">Exemplo 6: importar um CSV que não tem um valor</span><span class="sxs-lookup"><span data-stu-id="75159-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="75159-165">Este exemplo mostra como o `Import-Csv` cmdlet no PowerShell responde quando a linha de cabeçalho em um arquivo CSV inclui um valor nulo ou vazio.</span><span class="sxs-lookup"><span data-stu-id="75159-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="75159-166">`Import-Csv` Substitui um nome padrão para a linha de cabeçalho ausente que se torna o nome da Propriedade do objeto que `Import-Csv` retorna.</span><span class="sxs-lookup"><span data-stu-id="75159-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="75159-167">Para criar seu arquivo de Projects.csv, use os valores mostrados na saída do exemplo `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="75159-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="75159-168">O `Get-Content` cmdlet exibe o arquivo Projects.csv.</span><span class="sxs-lookup"><span data-stu-id="75159-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="75159-169">A linha de cabeçalho não tem um valor entre **ProjectName** e **concluída** .</span><span class="sxs-lookup"><span data-stu-id="75159-169">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="75159-170">O `Import-Csv` cmdlet importa o arquivo de Projects.csv e exibe uma mensagem de aviso porque **H1** é um nome de cabeçalho padrão.</span><span class="sxs-lookup"><span data-stu-id="75159-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="75159-171">O `(Import-Csv -Path
.\Projects.csv).H1` comando obtém os valores de propriedade **H1** e exibe um aviso.</span><span class="sxs-lookup"><span data-stu-id="75159-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="75159-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="75159-172">PARAMETERS</span></span>

### <span data-ttu-id="75159-173">-Delimitador</span><span class="sxs-lookup"><span data-stu-id="75159-173">-Delimiter</span></span>

<span data-ttu-id="75159-174">Especifica o delimitador que separa os valores de propriedade no arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="75159-175">O padrão é uma vírgula (,).</span><span class="sxs-lookup"><span data-stu-id="75159-175">The default is a comma (,).</span></span>

<span data-ttu-id="75159-176">Insira um caractere, como dois pontos (:).</span><span class="sxs-lookup"><span data-stu-id="75159-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="75159-177">Para especificar um ponto e vírgula (;) Coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="75159-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="75159-178">Se você especificar um caractere que não seja o delimitador de cadeia de caracteres real no arquivo, o `Import-Csv` não poderá criar os objetos a partir das cadeias CSV e retornará as seqüências de caracteres CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="75159-179">-Codificação</span><span class="sxs-lookup"><span data-stu-id="75159-179">-Encoding</span></span>

<span data-ttu-id="75159-180">Especifica a codificação para o arquivo CSV importado.</span><span class="sxs-lookup"><span data-stu-id="75159-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="75159-181">O valor padrão é `utf8NoBOM`.</span><span class="sxs-lookup"><span data-stu-id="75159-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="75159-182">Os valores aceitáveis para esse parâmetro são os seguintes:</span><span class="sxs-lookup"><span data-stu-id="75159-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="75159-183">`ascii`: Usa a codificação para o conjunto de caracteres ASCII (7 bits).</span><span class="sxs-lookup"><span data-stu-id="75159-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="75159-184">`bigendianunicode`: Codifica no formato UTF-16 usando a ordem de bytes big-endian.</span><span class="sxs-lookup"><span data-stu-id="75159-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="75159-185">`oem`: Usa a codificação padrão para MS-DOS e programas de console.</span><span class="sxs-lookup"><span data-stu-id="75159-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="75159-186">`unicode`: Codifica no formato UTF-16 usando a ordem de byte little-endian.</span><span class="sxs-lookup"><span data-stu-id="75159-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="75159-187">`utf7`: Codifica em formato UTF-7.</span><span class="sxs-lookup"><span data-stu-id="75159-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="75159-188">`utf8`: Codifica em formato UTF-8.</span><span class="sxs-lookup"><span data-stu-id="75159-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="75159-189">`utf8BOM`: Codifica em formato UTF-8 com marca de ordem de byte (BOM)</span><span class="sxs-lookup"><span data-stu-id="75159-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="75159-190">`utf8NoBOM`: Codifica em formato UTF-8 sem marca de ordem de byte (BOM)</span><span class="sxs-lookup"><span data-stu-id="75159-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="75159-191">`utf32`: Codifica no formato UTF-32.</span><span class="sxs-lookup"><span data-stu-id="75159-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="75159-192">A partir do PowerShell 6,2, o parâmetro de **codificação** também permite IDs numéricas de páginas de código registradas (como `-Encoding 1251` ) ou nomes de cadeia de caracteres de páginas de código registradas (como `-Encoding "windows-1251"` ).</span><span class="sxs-lookup"><span data-stu-id="75159-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="75159-193">Para obter mais informações, consulte a documentação do .NET para [Encoding. CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span><span class="sxs-lookup"><span data-stu-id="75159-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="75159-194">-Cabeçalho</span><span class="sxs-lookup"><span data-stu-id="75159-194">-Header</span></span>

<span data-ttu-id="75159-195">Especifica uma linha de cabeçalho de coluna alternativo para o arquivo importado.</span><span class="sxs-lookup"><span data-stu-id="75159-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="75159-196">O cabeçalho de coluna determina os nomes de propriedade dos objetos criados pelo `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="75159-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="75159-197">Insira cabeçalhos de coluna como uma lista separada por vírgulas.</span><span class="sxs-lookup"><span data-stu-id="75159-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="75159-198">Não coloque a cadeia de caracteres do cabeçalho entre aspas.</span><span class="sxs-lookup"><span data-stu-id="75159-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="75159-199">Coloque cada cabeçalho de coluna entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="75159-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="75159-200">Se você inserir menos cabeçalhos de coluna do que as colunas de dados, as colunas de dados restantes serão descartadas.</span><span class="sxs-lookup"><span data-stu-id="75159-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="75159-201">Se você inserir mais cabeçalhos de coluna do que as colunas de dados, os cabeçalhos de coluna adicionais serão criados com colunas de dados vazias.</span><span class="sxs-lookup"><span data-stu-id="75159-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="75159-202">Ao usar o parâmetro **header** , exclua a linha de cabeçalho original do arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="75159-203">Caso contrário, `Import-Csv` cria um objeto extra dos itens na linha de cabeçalho.</span><span class="sxs-lookup"><span data-stu-id="75159-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="75159-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="75159-204">-LiteralPath</span></span>

<span data-ttu-id="75159-205">Especifica o caminho para o arquivo CSV a importar.</span><span class="sxs-lookup"><span data-stu-id="75159-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="75159-206">Ao contrário de **Path** , o valor do parâmetro **LiteralPath** é usado exatamente como foi digitado.</span><span class="sxs-lookup"><span data-stu-id="75159-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="75159-207">Nenhum caractere é interpretado como caractere curinga.</span><span class="sxs-lookup"><span data-stu-id="75159-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="75159-208">Se o caminho incluir caracteres de escape, coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="75159-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="75159-209">Aspas simples instruem o PowerShell a não interpretar nenhum caractere como sequências de escape.</span><span class="sxs-lookup"><span data-stu-id="75159-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="75159-210">-Path</span><span class="sxs-lookup"><span data-stu-id="75159-210">-Path</span></span>

<span data-ttu-id="75159-211">Especifica o caminho para o arquivo CSV a importar.</span><span class="sxs-lookup"><span data-stu-id="75159-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="75159-212">Também é possível canalizar um caminho para `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="75159-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="75159-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="75159-213">-UseCulture</span></span>

<span data-ttu-id="75159-214">Usa o separador de lista para a cultura atual como o delimitador de item.</span><span class="sxs-lookup"><span data-stu-id="75159-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="75159-215">Para localizar o separador de lista para uma cultura, use o seguinte comando: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="75159-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="75159-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="75159-216">CommonParameters</span></span>

<span data-ttu-id="75159-217">Este cmdlet oferece suporte aos parâmetros comuns: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction e -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="75159-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="75159-218">Para obter mais informações, confira [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="75159-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="75159-219">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="75159-219">INPUTS</span></span>

### <span data-ttu-id="75159-220">System.String</span><span class="sxs-lookup"><span data-stu-id="75159-220">System.String</span></span>

<span data-ttu-id="75159-221">É possível canalizar uma cadeia de caracteres que contém um caminho para `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="75159-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="75159-222">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="75159-222">OUTPUTS</span></span>

### <span data-ttu-id="75159-223">Objeto</span><span class="sxs-lookup"><span data-stu-id="75159-223">Object</span></span>

<span data-ttu-id="75159-224">Esse cmdlet retorna os objetos descritos pelo conteúdo no arquivo CSV.</span><span class="sxs-lookup"><span data-stu-id="75159-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="75159-225">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="75159-225">NOTES</span></span>

<span data-ttu-id="75159-226">Como os objetos importados são versões CSV do tipo de objeto, eles não são reconhecidos e formatados pelas entradas de formatação de tipo do PowerShell que formatam as versões não-CSV do tipo de objeto.</span><span class="sxs-lookup"><span data-stu-id="75159-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="75159-227">O resultado de um `Import-Csv` comando é uma coleção de cadeias de caracteres que formam um objeto personalizado como tabela.</span><span class="sxs-lookup"><span data-stu-id="75159-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="75159-228">Cada linha é uma cadeia de caracteres separada, portanto, você pode usar a propriedade **Count** do objeto para contar as linhas da tabela.</span><span class="sxs-lookup"><span data-stu-id="75159-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="75159-229">As colunas são as propriedades do objeto e os itens nas linhas são os valores das propriedades.</span><span class="sxs-lookup"><span data-stu-id="75159-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="75159-230">A linha de cabeçalho de coluna determina o número de colunas e os nomes dessas colunas.</span><span class="sxs-lookup"><span data-stu-id="75159-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="75159-231">Os nomes das colunas também são os nomes das propriedades dos objetos.</span><span class="sxs-lookup"><span data-stu-id="75159-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="75159-232">A primeira linha é interpretada como os cabeçalhos de coluna, a menos que você use o parâmetro **header** para especificar cabeçalhos de coluna.</span><span class="sxs-lookup"><span data-stu-id="75159-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="75159-233">Se uma linha qualquer tiver mais valores que a linha de cabeçalhos, os valores excedentes serão ignorados.</span><span class="sxs-lookup"><span data-stu-id="75159-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="75159-234">Se a linha de cabeçalho da coluna não tiver um valor ou contiver um valor nulo ou vazio, o `Import-Csv` usará **H** seguido por um número para o cabeçalho da coluna e o nome da propriedade ausentes.</span><span class="sxs-lookup"><span data-stu-id="75159-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="75159-235">No arquivo CSV, cada objeto é representado por uma lista separada por vírgulas dos valores de propriedade do objeto.</span><span class="sxs-lookup"><span data-stu-id="75159-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="75159-236">Os valores de propriedade são convertidos em cadeias de caracteres usando o método **ToString ()** do objeto, para que sejam representados pelo nome do valor da propriedade.</span><span class="sxs-lookup"><span data-stu-id="75159-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="75159-237">`Export-Csv` não exporta os métodos do objeto.</span><span class="sxs-lookup"><span data-stu-id="75159-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="75159-238">`Import-Csv` também dá suporte ao formato de log estendido W3C.</span><span class="sxs-lookup"><span data-stu-id="75159-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="75159-239">As linhas que começam com `#` são tratadas como comentários e ignoradas, a menos que o comentário comece com `#Fields:` e contenha uma lista delimitada de nomes de coluna.</span><span class="sxs-lookup"><span data-stu-id="75159-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="75159-240">Nesse caso, o cmdlet usa esses nomes de coluna.</span><span class="sxs-lookup"><span data-stu-id="75159-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="75159-241">Esse é o formato padrão para o IIS do Windows e outros logs do servidor Web.</span><span class="sxs-lookup"><span data-stu-id="75159-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="75159-242">Para obter mais informações, consulte [formato de arquivo de log estendido](https://www.w3.org/TR/WD-logfile.html).</span><span class="sxs-lookup"><span data-stu-id="75159-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="75159-243">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="75159-243">RELATED LINKS</span></span>

[<span data-ttu-id="75159-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="75159-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="75159-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="75159-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="75159-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="75159-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="75159-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="75159-247">Get-Culture</span></span>](Get-Culture.md)
